--- a/Pages/Inventory/View.cshtml
+++ b/Pages/Inventory/View.cshtml
@@ -9,6 +9,7 @@
 	<div class="row">
 		<ul class="breadcrumbs">
 			<li><a href="#">Inventory</a></li>
+            <li class="divider">/</li>
 			<li><a href="#" class="active">INV0000001</a></li>
 		</ul>
 	</div>
@@ -52,19 +53,6 @@
                         <td width="15%">500</td>
                         <td width="15%">0</td>
                         <td width="15%">Piece</td>
-                        <td>
-                            <div class="d-flex align-items-center" style="gap: 5px">
-                                <div class="d-inline position-relative">
-                                    <a href="#" role="button" id="recordOptions" data-bs-toggle="dropdown" aria-expanded="false">
-                                        <i class="bi bi-three-dots-vertical"></i>
-                                    </a>
-                                    <ul class="dropdown-menu" aria-labelledby="recordOptions">
-                                        <li><a class="dropdown-item" href="#">Edit</a> </li>
-                                        <li><a href="#" class="dropdown-item">Delete</a></li>
-                                    </ul>
-                                </div>
-                            </div>
-                        </td>
                     </tr>
                 </tbody>
             </table>
@@ -77,10 +65,6 @@
     $(document).ready(function () {
         $('#inventory-inclusion').DataTable({
             responsive: true,
-            columnDefs: [
-                { "orderable": true, "targets": [0, 1, 2, 3, 4, 5, 6] }, // Sortable columns
-                { "orderable": false, "targets": [7] } // Non-sortable columns
-            ]
         });
     });
 </script>
